@@ -20,7 +20,10 @@ SETFONT_ARGS=
 
 # This variable contains numbers of console nodes in /dev/ on which
 # fonts and charmap given in CONSOLECHARS_ARGS and SETFONT_ARGS will be 
-# set.
+# set. If value "*" is given, settings will be enabled on all available 
+# console nodes.
+# (Notice: this variable needs to be defined for font and unicode 
+# settings to take effect.)
 TTY_NUMS=
 
 # This variable tells the keymap.sh script to run unicode_start or not
