@@ -1,3 +1,10 @@
+2006-03-03 Juuso Alasuutari <juuso.alasuutari@tamperelainen.org>
+	* init.d/keymap.sh: font & unicode are set on all consoles 
+	  listed in /etc/inittab if $TTY_NUMS has "*".
+	* init.d/keymap.conf: added comments; info about TTY_NUMS="*" 
+	  and notice that TTY_NUMS needs to be set for any font/unicode 
+	  changes to take effect
+
 2006-02-27 David Brown <dmlb2000@gmail.com>
         * init.d/mountall.sh: fixed recursive_rm to not fail if nothing is there
         * DETAILS: updated patch level
